--- a/hungry-explorer-client/package.json
+++ b/hungry-explorer-client/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@stripe/react-stripe-js": "^2.4.0",
+    "@stripe/stripe-js": "^2.2.1",
     "axios": "^1.6.0",
     "firebase": "^10.5.2",
     "framer-motion": "^10.16.4",
