--- a/hungry-explorer-client/package.json
+++ b/hungry-explorer-client/package.json
@@ -25,6 +25,7 @@
     "react-loader-spinner": "^5.4.5",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^6.18.0",
+    "recharts": "^2.10.3",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.9.0"
   },
